--- a/creations/static/stylesheets/writing.sass
+++ b/creations/static/stylesheets/writing.sass
@@ -62,12 +62,24 @@
         width: 95%
 
 
+#article
+  #fields
+    span
+      float: left
+      clear: both
+      margin-bottom: $whitespace / 2
+
+
 #book
   img
     width: 100%
 
+  .column
+    span
+      float: left
+      clear: both
+      margin-bottom: $whitespace / 2
+
   .tags
     float: left
     width: 100%
-    clear: both
-    margin-top: $whitespace
