--- a/creations/templates/research_item.html
+++ b/creations/templates/research_item.html
@@ -55,6 +55,6 @@
 </div>
 {% endif %}
 
-{% include 'tags.html' with item=research_item field=True %}
+{% include 'tags.html' with item=research_item %}
 
 {% endblock %}
