--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -27,7 +27,7 @@ html, body
   margin-bottom: $whitespace
 
 
-#page-title, .page-subtitle, .page-section
+#page-title, .page-subtitle, .page-section, .page-subsection
   float: left
   clear: both
   width: 100%
@@ -45,7 +45,14 @@ html, body
   margin-bottom: $whitespace * 2
 
   &:last-child
-    margin-bottom: 0
+    margin-bottom: 0px
+
+
+.page-subsection
+  margin-bottom: $whitespace
+
+  &:last-child
+    margin-bottom: 0px
 
 
 .two-columns
@@ -55,6 +62,15 @@ html, body
 
     &:last-child
       margin-left: 6%
+      margin-top: 0px
+
+  @media (max-width: 750px)
+    .column
+      width: 100%
+
+      &:last-child
+        margin-left: 0px
+        margin-top: $whitespace / 2
 
 
 .field
