--- a/website/static/stylesheets/about.sass
+++ b/website/static/stylesheets/about.sass
@@ -1,22 +1,11 @@
 #about
-  #primary-photo
-    float: left
-    width: 40%
+  img#primary-photo
+    width: 100%
 
-  #blurb
-    float: right
-    width: 50%
-    margin-left: 5%
-    margin-right: 5%
+  #overview
+    width: 95%
 
-  @media (max-width: 900px)
-    #primary-photo
-      float: none
-      width: 100%
+    @include two-columns(35%, 60%, 750px)
 
-    #blurb
-      float: none
-      width: 100%
-      margin-top: $whitespace
-      margin-left: 0px
-      margin-right: 0px
+  #bio
+    max-width: 750px
