--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -22,7 +22,7 @@ $sans-font-family: 'Dosis', sans-serif
     font-weight: 500
     letter-spacing: 1px
 
-@mixin dark-links()
+@mixin dark-links
   color: $dark-link-color
 
   &:hover, &.active
