--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -12,52 +12,49 @@
 
 {% block content %}
 
-<div class="page-subsection">
-  <div class="two-columns">
+<div id="program-info" class="page-subsection">
+  {% with artwork=program.get_artwork %}
+  {% if artwork %}
+  <div class="column">
+    <img id="artwork" src="data:image;base64,{{ artwork }}"/>
+  </div>
+  {% endif %}
+  {% endwith %}
 
-    {% with artwork=program.get_artwork %}
-    {% if artwork %}
-    <div class="column artwork">
-      <img src="data:image;base64,{{ artwork }}"/>
-    </div>
+  <div class="column">
+    <span>
+      Original Air Date: {{ program.air_date }}
+    </span>
+
+    {% with program.get_reruns.all as reruns %}
+    {% if reruns %}
+    <span>
+      Rerun Dates:
+      {% for rerun in reruns %}
+        {{ rerun.air_date }}{% if not forloop.last %}; {% endif %}
+      {% endfor %}
+    </span>
     {% endif %}
     {% endwith %}
 
-    <div class="column">
-      <span>
-        Original Air Date: {{ program.air_date }}
-      </span>
+    <span>
+      {{ program.description|markdown }}
+    </span>
 
-      {% with program.get_reruns.all as reruns %}
-      {% if reruns %}
-      <span>
-        Rerun Dates:
-        {% for rerun in reruns %}
-          {{ rerun.air_date }}{% if not forloop.last %}; {% endif %}
-        {% endfor %}
-      </span>
-      {% endif %}
-      {% endwith %}
+    <span>
+      {% include 'audio_with_download.html' with file=program.file %}
+    </span>
 
-      <span>
-        {{ program.description|markdown }}
-      </span>
+    <span>
+      Duration: {{ program.get_printable_duration }}
+    </span>
 
-      <span>
-        {% include 'audio_with_download.html' with file=program.file %}
-      </span>
-
-      <span>
-        Duration: {{ program.get_printable_duration }}
-      </span>
-
-      {% if program.supplemental_content_url %}
-      <span>
-        <a href="{{ program.supplemental_content_url }}">
-          Transcript and photos</a>
-      </span>
-      {% endif %}
-    </div>
+    {% if program.supplemental_content_url %}
+    <span>
+      <a href="{{ program.supplemental_content_url }}">
+        Transcript and photos</a>
+    </span>
+    {% endif %}
   </div>
 </div>
 
