Use pixel width for bottom margin on about picture

--- a/website/static/stylesheets/about.sass
+++ b/website/static/stylesheets/about.sass
@@ -4,12 +4,13 @@
     width: 40%
     height: auto
     margin-right: 5%
-    margin-bottom: 3%
+    margin-bottom: $whitespace / 2
 
   @media (max-width: 600px)
     img#primary-photo
       width: 100%
       margin-right: 0%
+      margin-bottom: $whitespace
 
   #overview, #bio
     max-width: 900px
