--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -318,11 +318,12 @@ html, body {
   width: 40%;
   height: auto;
   margin-right: 5%;
-  margin-bottom: 3%; }
+  margin-bottom: 18px; }
 @media (max-width: 600px) {
   #about img#primary-photo {
     width: 100%;
-    margin-right: 0%; } }
+    margin-right: 0%;
+    margin-bottom: 36px; } }
 #about #overview, #about #bio {
   max-width: 900px; }
 
